--- a/Site/Web2/index_adm.html
+++ b/Site/Web2/index_adm.html
@@ -106,14 +106,23 @@
                 </div>
             </div>
             <div class="text col">
-                <h2 class="container m-3 h2_white">Quantidade coletada</h2>
                     <div id="text_white" class="container-fluid m-3  mx-auto text-justify">
-                        <p>X KG</p>
+                        <p1>X KG</p1>
+                        <p2>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
+                                <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
+                                <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
+                            </svg>
+                            Quantidade coletada</p2>
                     </div>
-                <h2 class="container m-3 h2_wite">Ranqueamento escolar</h2>
                     <div id="text_white" class="container-fluid m-3  mx-auto text-justify">
-                        <p>X° Lugar</p>
-                    </div>   
+                        <p1>X° Lugar</p1>
+                        <p2>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trophy" viewBox="0 0 16 16">
+                                <path d="M2.5.5A.5.5 0 0 1 3 0h10a.5.5 0 0 1 .5.5c0 .538-.012 1.05-.034 1.536a3 3 0 1 1-1.133 5.89c-.79 1.865-1.878 2.777-2.833 3.011v2.173l1.425.356c.194.048.377.135.537.255L13.3 15.1a.5.5 0 0 1-.3.9H3a.5.5 0 0 1-.3-.9l1.838-1.379c.16-.12.343-.207.537-.255L6.5 13.11v-2.173c-.955-.234-2.043-1.146-2.833-3.012a3 3 0 1 1-1.132-5.89A33.076 33.076 0 0 1 2.5.5zm.099 2.54a2 2 0 0 0 .72 3.935c-.333-1.05-.588-2.346-.72-3.935zm10.083 3.935a2 2 0 0 0 .72-3.935c-.133 1.59-.388 2.885-.72 3.935zM3.504 1c.007.517.026 1.006.056 1.469.13 2.028.457 3.546.87 4.667C5.294 9.48 6.484 10 7 10a.5.5 0 0 1 .5.5v2.61a1 1 0 0 1-.757.97l-1.426.356a.5.5 0 0 0-.179.085L4.5 15h7l-.638-.479a.501.501 0 0 0-.18-.085l-1.425-.356a1 1 0 0 1-.757-.97V10.5A.5.5 0 0 1 9 10c.516 0 1.706-.52 2.57-2.864.413-1.12.74-2.64.87-4.667.03-.463.049-.952.056-1.469H3.504z"/>
+                            </svg>
+                            Ranqueamento escolar</p2>
+                    </div>
             </div>
         </div>
         
@@ -128,7 +137,8 @@
                     d="M13.6321 0.688052L3.60807 4.00531C2.30584 4.43625 1.86612 4.69046 1.43338 5.0564C1.00063 5.42235 0.681173 5.86487 0.469898 6.39102C0.258623 6.91716 0.155533 7.41486 0.155533 8.78777V23.7661C0.155533 24.4336 0.224963 24.6756 0.35534 24.9196C0.485716 25.1637 0.677038 25.3552 0.92082 25.4857C1.1646 25.6162 1.40641 25.6857 2.07324 25.6857H30.8991C31.5659 25.6857 31.8077 25.6162 32.0515 25.4857C32.2953 25.3552 32.4866 25.1637 32.617 24.9196C32.7474 24.6756 32.8168 24.4336 32.8168 23.7661V8.75484C32.8168 7.39118 32.7157 6.89702 32.5077 6.37391C32.2998 5.85081 31.985 5.41008 31.5578 5.04383C31.1307 4.67759 30.6963 4.42185 29.4073 3.98053L19.8845 0.720191C18.5429 0.260842 18.0804 0.141504 17.5456 0.0618076C17.0108 -0.017889 16.5133 -0.0204465 15.9777 0.0537482C15.4421 0.127943 14.9784 0.24252 13.6321 0.688052ZM2.64876 23.19H10.9175V10.5599C10.9175 10.0077 11.3652 9.55994 11.9175 9.55994H21.0549C21.6071 9.55994 22.0549 10.0077 22.0549 10.5599V23.19H30.3236V8.75484C30.3236 7.78756 30.2885 7.54145 30.1912 7.29663C30.1326 7.14932 30.0562 7.04241 29.9359 6.93927C29.736 6.76787 29.5148 6.65496 28.6004 6.34192L19.0777 3.08157C17.9373 2.69116 17.5658 2.58802 17.1785 2.53029C16.8786 2.48561 16.6198 2.48428 16.3195 2.52588C15.9316 2.57962 15.559 2.67893 14.4147 3.05761L4.39068 6.37486C3.46809 6.68017 3.2448 6.79166 3.04237 6.96284C2.92043 7.06596 2.84278 7.17351 2.78324 7.32178C2.68442 7.5679 2.64876 7.81511 2.64876 8.78777V23.19Z"
                     fill="#005FF9" />
             </svg>
-            TrashMap</a>
+            TrashMap
+        </a>
         <div class="col mt-3 mr-0 ml-0 pr-0 ">
             <a href="" class="media_social text-decoration-none ">
                 <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
