--- a/Site/Web2/index_adm.html
+++ b/Site/Web2/index_adm.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
 
     <link rel="stylesheet" href="./css/estilo.css">
+    <link rel="stylesheet" href="./css/estiloIndexAdm.css">
     <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/node_modules/bootstrap-icons/font/bootstrap-icons.css">
     <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
