--- a/Site/Web2/cadastro.html
+++ b/Site/Web2/cadastro.html
@@ -65,23 +65,23 @@
             <div class="form-row">
                 <div class="form-group col-md-12 col-lg-6">
                     <label>Nome Completo</label>
-                    <input type="text" class="form-control " id="inputName" placeholder="Insira seu nome">
+                    <input type="text" class="form-control " id="inputName" placeholder="Insira seu nome" required>
                 </div>
                 <div class="form-group col-md-12 col-lg-6">
                     <label>Usuário</label>
-                    <input type="text" class="form-control" id="inputUser" placeholder="Crie um usuário">
+                    <input type="text" class="form-control" id="inputUser" placeholder="Crie um usuário" required>
                 </div>
             </div>
             <div class="form-row ">
                 <div class="form-group col-md-12 col-lg-6">
                     <label>Senha</label>
-                    <input type="password" class="form-control" id="inputPassword" placeholder="Digite uma senha">
+                    <input type="password" class="form-control" id="inputPassword" placeholder="Digite uma senha" required>
                     <small id="passwordHelpBlock" class="form-text text-light">
                         Sua senha deve ter de 8-20 caracteres, tendo letras e números, sem espaços ou emoji. </small>
                 </div>
                 <div class="form-group col-md-12 col-lg-6">
                     <label>Confime sua senha</label>
-                    <input type="password" id="inputPassword2" class="form-control" placeholder="Confirme sua senha">
+                    <input type="password" id="inputPassword2" class="form-control" placeholder="Confirme sua senha" required>
                 </div>
             </div>
             <div class="form-row">
@@ -94,11 +94,11 @@
                 </div>
                 <div class="form-group col-md-12 col-lg-6">
                     <label>Email</label>
-                    <input type="email" class="form-control" id="inputEmail" placeholder="Digite seu e-mail">
+                    <input type="email" class="form-control" id="inputEmail" placeholder="Digite seu e-mail" required>
                 </div>
                 <div class="form-group col-md-12 col-lg-6">
                     <label for="inputCity">RA (Registro Acadêmico)</label>
-                    <input type="text" class="form-control" id="inputRA" placeholder="Digite seu RA">
+                    <input type="text" class="form-control" id="inputRA" placeholder="Digite seu RA" required>
                 </div>
             </div>
             <div class="criarAlun">
