--- a/Site/Web2/index_aluno.html
+++ b/Site/Web2/index_aluno.html
@@ -51,7 +51,7 @@
                 <div class="collapse navbar-collapse " id="navbarResponsive">
                     <ul class="navbar-nav ml-md-auto">
                         <li class="nav-item">
-                            <a class="nav-link js-scroll-trigger " href="/index.html">Inicio</a>
+                            <a class="nav-link js-scroll-trigger " href="/index_aluno.html">Inicio</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link js-scroll-trigger" href="/ranking_aluno.html">Ranking</a>
