--- a/Site/Web2/index_adm.html
+++ b/Site/Web2/index_adm.html
@@ -101,12 +101,13 @@
                 <span>Pontos de coleta perto de você:</span>
                 <div id="map-container-google-1" class="z-depth-1-half map-container" style="height: 500px">
                     <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3752.2874212368697!2d-43.84058568446949!3d-19.87008174158164!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xa69d5bd0d95c27%3A0x779dd569368a90d4!2sInstituto%20Federal%20de%20Minas%20Gerais%20Campus%20Sabar%C3%A1!5e0!3m2!1spt-BR!2sbr!4v1619464961242!5m2!1spt-BR!2sbr"
-                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" frameborder="0"
-                        style="border:0 " allowfullscreen></iframe>
+                        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15009.149206050868!2d-43.838397!3d-19.8700868!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x779dd569368a90d4!2sInstituto%20Federal%20de%20Minas%20Gerais%20Campus%20Sabar%C3%A1!5e0!3m2!1spt-BR!2sbr!4v1619576702328!5m2!1spt-BR!2sbr"
+                         loading="lazy" style="border:0"  class="h-100 w-100 " allowfullscreen>
+                    </iframe>
+                    
                 </div>
             </div>
-            <div class="text col">
+            <div class="text_col">
                     <div id="text_white" class="container-fluid m-3  mx-auto text-justify">
                         <p1>X KG</p1>
                         <p2>
