--- a/Site/Web2/login.html
+++ b/Site/Web2/login.html
@@ -2,7 +2,7 @@
 <html lang="pt_br">
 
 <head>
-    <title>TrashMap-VFeRoma</title>
+    <title>TrashMap-Login</title>
     <meta charset="UTF-8">
 
     <link rel="stylesheet" href="./css/estilo.css">
