--- a/Site/Web2/ranking_aluno.html
+++ b/Site/Web2/ranking_aluno.html
@@ -157,7 +157,7 @@
                     </table>
                 </div>
             </div>
-            <div class="col" >
+            <div class="col" id="geral" >
                 <h2 class="text_white row justify-content-center" >Geral Sobre <span class="ml-1"> IF Sabará</span></h2>
                 <div class="text_col pt-md-3 col-sm-12">
                     <div id="text_white" class="container-fluid m-4 mx-auto text-justify row">
