--- a/Site/Web2/index_aluno.html
+++ b/Site/Web2/index_aluno.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="pt_br" style="height: 100vh;">
+<html lang="pt_br">
 
 <head>
     <title>TrashMap-VFeRoma</title>
     <meta charset="UTF-8">
 
-    <link rel="stylesheet" href="./css/estilo.css">
-    <link rel="stylesheet" href="./css/estiloIndexAluno.css">
+    <link rel="stylesheet" href="/css/estilo.css">
+    <link rel="stylesheet" href="/css/estiloIndexAluno.css">
     <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/node_modules/bootstrap-icons/font/bootstrap-icons.css">
     <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
@@ -121,7 +121,7 @@
         </div>
         
         <div id="" class="container-fluid row">
-            <p class="text_white col-12 pt-5">Pontos de coleta perto de você:</p>
+            <p class="text_white col-12 pt-md-5">Pontos de coleta perto de você:</p>
                 <div id="map-container-google-1" class="z-depth-1-half m-0 col" style="height: 40vh !important;">
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15009.149206050868!2d-43.838397!3d-19.8700868!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x779dd569368a90d4!2sInstituto%20Federal%20de%20Minas%20Gerais%20Campus%20Sabar%C3%A1!5e0!3m2!1spt-BR!2sbr!4v1619576702328!5m2!1spt-BR!2sbr"
@@ -137,7 +137,7 @@
     </div>
 
     <!-- Rodapé -->
-    <footer class="row text-center mt-3 ml-0 mr-0 mb-3 p-0" id="rodape">
+    <footer class="row text-center mt-lg-3 ml-0 mr-0 mb-3 p-0" id="rodape">
         <a class="navbar-brand js-scroll-trigger col d-none d-md-block mt-md-2 mt-lg-3 p-2 " id="nameproj">
             <svg width="33" height="26" viewBox="0 0 33 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
