--- a/Site/Web2/conta_aluno.html
+++ b/Site/Web2/conta_aluno.html
@@ -123,33 +123,157 @@
 
         <div id="" class="container-fluid row pt-lg-4 pt-md-2">
             <div class="container-fluid col
-             col-sm-12 col-md-6 border border-top-0 border-left-0 border-bottom-0 border-white"
-                id="info">
+             col-sm-12 col-md-6 border border-top-0 border-left-0 border-bottom-0 border-white" id="info">
                 <h2 class="col-12 pt">Informações da conta:</h2>
                 <div class="form-group row pt-lg-5">
-                        <label class="col-form-label" style="padding-right: 4vh !important;">Nome:</label>
-                        <input type="text" class="form-control col nao" id="Nnome" value="Cody Simmmons" readonly style="background-color: white;">
+                    <label class="col-form-label" style="padding-right: 4vh !important;">Nome:</label>
+                    <input type="text" class="form-control col nao" id="Nnome" value="Cody Simmmons" readonly
+                        style="background-color: white;">
                 </div>
                 <div class="form-group row">
                     <label class="col-form-label" style="padding-right: 8.4vh !important;">RA: </label>
-                    <input type="text" class="form-control col nao" id="Nra" value="000000" readonly style="background-color: white;">
+                    <input type="text" class="form-control col nao" id="Nra" value="000000" readonly
+                        style="background-color: white;">
                 </div>
                 <div class="form-group row">
                     <label class="col-form-label" style="padding-right: 5.1vh !important;">Email: </label>
-                    <input type="text" class="form-control col nao" id="Nemail" value="000000" readonly style="background-color: white;">
+                    <input type="text" class="form-control col nao" id="Nemail" value="cody.simmmons@ifmg.edu.br"
+                        readonly style="background-color: white;">
                 </div>
                 <div class="form-group row">
                     <label class="col-form-label">Usuário: </label>
-                    <input type="text" class="form-control col nao" id="Nuser" value="000000" readonly style="background-color: white;">
+                    <input type="text" class="form-control col nao" id="Nuser" value="coddy123" readonly
+                        style="background-color: white;">
                 </div>
             </div>
-            <div class="col" id="geral" >
-                
+            <div class="col" id="geral">
+                <div class="accordion" id="accordionExample">
+                    <div class="card">
+                        <div class="card-header " id="headingOne">
+                            <h2 class="mb-0">
+                                <button class="btn btn-link btn-block text-left text-decoration-none" type="button"
+                                    data-toggle="collapse" data-target="#collapseOne" aria-expanded="true"
+                                    aria-controls="collapseOne" onclick="muda(1)">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                        class="bi bi-chevron-right muda1" viewBox="0 0 16 16" style="display: inline-block;">
+                                        <path fill-rule="evenodd"
+                                            d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
+                                    </svg>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                        class="bi bi-chevron-down muda1" viewBox="0 0 16 16"
+                                        style="display: none;">
+                                        <path fill-rule="evenodd"
+                                            d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z" />
+                                    </svg>
+                                    Modificar Senha
+                                </button>
+                            </h2>
+                        </div>
+
+                        <div id="collapseOne" class="collapse" aria-labelledby="headingOne"
+                            data-parent="#accordionExample">
+                            <div class="card-body">
+                                <div class="form-group row pt-0 pb-0">
+                                    <label class="" style="padding-right: 4vh !important;">Senha atual:</label>
+                                    <input type="text" class="form-control nao" id="AOsenha"
+                                        placeholder="Digite a senha atual" required>
+                                </div>
+                                <div class="form-group row pt-0 pb-0">
+                                    <label class="" style="padding-right: 4vh !important;">Nova Senha:</label>
+                                    <input type="text" class="form-control nao" id="ANsenha"
+                                        placeholder="Digite a nova senha" required>
+                                </div>
+                                <small id="passwordHelpBlock" class="form-text text-light pb-3">
+                                    Sua senha deve ter de 8-20 caracteres, tendo letras e números, sem espaços ou emoji.
+                                </small>
+                                <div class="form-group row pt-0 pb-0">
+                                    <label class="" style="padding-right: 4vh !important;">Repita a nova senha:</label>
+                                    <input type="text" class="form-control nao" id="ANRsenha"
+                                        placeholder="Digite a nova senha" required>
+                                </div>
+                                <small style="color: white;"></small>
+                                <div class="enviarNSenha">
+                                    <button type="submit" class="btn btn-outline-light bt" id="enviar1">Enviar</button>
+                                </div>
+                            </div>
+                            
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-header" id="headingTwo">
+                            <h2 class="mb-0">
+                                <button class="btn btn-link btn-block text-left collapsed" type="button"
+                                    data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false"
+                                    aria-controls="collapseTwo" onclick="muda(2)">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                        class="bi bi-chevron-right muda2" viewBox="0 0 16 16"
+                                        style="display: inline-block;">
+                                        <path fill-rule="evenodd"
+                                            d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
+                                    </svg>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                        class="bi bi-chevron-down muda2" viewBox="0 0 16 16" style="display: none;">
+                                        <path fill-rule="evenodd"
+                                            d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z" />
+                                    </svg>
+                                    Modificar Usuário
+                                </button>
+                            </h2>
+                        </div>
+                        <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
+                            data-parent="#accordionExample">
+                            <div class="card-body">
+                                <div class="form-group row pt-0 pb-0">
+                                    <label class="" style="padding-right: 4vh !important;">Novo usuário:</label>
+                                    <input type="text" class="form-control nao" id="Auser"
+                                        placeholder="Digite o novo usuário" required>
+                                </div>
+                                <small style="color: white;"></small>
+                                <div class="enviarNUser">
+                                    <button type="submit" class="btn btn-outline-light bt" id="enviar2">Enviar</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-header" id="headingThree">
+                            <h2 class="mb-0">
+                                <button class="btn btn-link btn-block text-left collapsed" type="button"
+                                    data-toggle="collapse" data-target="#collapseThree" aria-expanded="false"
+                                    aria-controls="collapseThree" onclick="muda(3)">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                        class="bi bi-chevron-right muda3" viewBox="0 0 16 16"
+                                        style="display: inline-block;">
+                                        <path fill-rule="evenodd"
+                                            d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
+                                    </svg>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                        class="bi bi-chevron-down muda3" viewBox="0 0 16 16" style="display: none;">
+                                        <path fill-rule="evenodd"
+                                            d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z" />
+                                    </svg>
+                                    Modificar email
+                                </button>
+                            </h2>
+                        </div>
+                        <div id="collapseThree" class="collapse" aria-labelledby="headingThree"
+                            data-parent="#accordionExample">
+                            <div class="card-body">
+                                <div class="form-group row pt-0 pb-0">
+                                    <label class="" style="padding-right: 4vh !important;">Novo email:</label>
+                                    <input type="text" class="form-control nao" id="Amail"
+                                        placeholder="Digite o novo email" required>
+                                </div>
+                                <small style="color: white;"></small>
+                                <button type="submit" class="btn btn-outline-light bt" id="enviar3">Enviar</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
+
         </div>
-
-    </div>
-
+        <p id="mailInfo" class="text-center pt-5" >Quer alterar algum dado diferente? Mande um <a href="mailto:projetotrashmap@gmail.com?subject=Aluno:%20Alterar%20dados" id="emailTo" class="text-decoration-none">e-mail</a> para o administrador do IF</p> 
     </div>
 
     <!-- Rodapé -->
@@ -190,7 +314,7 @@
                         d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z" />
                 </svg>
             </a>
-            <a href="" class="media_social text-decoration-none cor">
+            <a href="mailto:projetotrashmap@gmail.com?subject=Contato" class="media_social text-decoration-none cor">
                 <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
                     class="bi bi-envelope" viewBox="0 0 16 16">
                     <path
@@ -201,10 +325,8 @@
     </footer>
 </body>
 <script>
-    var coll = document.getElementsByClassName("ap");
-
-
     function clica() {
+        var coll = document.getElementsByClassName("ap");
         for (var i = 0; i < coll.length; i++) {
             if (coll[i].style.display == "inline-block") {
                 coll[i].style.display = "none"
@@ -214,6 +336,62 @@
         }
     }
 
+    function muda(aux) {
+        var coll = document.getElementsByClassName("muda1");
+        var coll1 = document.getElementsByClassName("muda2");
+        var coll2 = document.getElementsByClassName("muda3");
+        if (aux == 1) {
+            if (coll1[1].style.display == "inline-block") {
+                coll1[1].style.display = "none"
+                coll1[0].style.display = "inline-block"
+            }
+            if (coll2[1].style.display == "inline-block") {
+                coll2[1].style.display = "none"
+                coll2[0].style.display = "inline-block"
+            }
+            for (var i = 0; i < coll.length; i++) {
+                if (coll[i].style.display == "inline-block") {
+                    coll[i].style.display = "none"
+                } else {
+                    coll[i].style.display = "inline-block"
+                }
+            }
+        } else if (aux == 2) {
+            if (coll[1].style.display == "inline-block") {
+                coll[1].style.display = "none"
+                coll[0].style.display = "inline-block"
+            }
+            if (coll2[1].style.display == "inline-block") {
+                coll2[1].style.display = "none"
+                coll2[0].style.display = "inline-block"
+            }
+            for (var i = 0; i < coll1.length; i++) {
+                if (coll1[i].style.display == "inline-block") {
+                    coll1[i].style.display = "none"
+                } else {
+                    coll1[i].style.display = "inline-block"
+                }
+            }
+        } else {
+            if (coll[1].style.display == "inline-block") {
+                coll[1].style.display = "none"
+                coll[0].style.display = "inline-block"
+            }
+            if (coll1[1].style.display == "inline-block") {
+                coll1[1].style.display = "none"
+                coll1[0].style.display = "inline-block"
+            }
+            for (var i = 0; i < coll2.length; i++) {
+
+                if (coll2[i].style.display == "inline-block") {
+                    coll2[i].style.display = "none"
+                } else {
+                    coll2[i].style.display = "inline-block"
+                }
+            }
+        }
+
+    }
 </script>
 
 </html>
