--- a/Site/Web2/conta_aluno.html
+++ b/Site/Web2/conta_aluno.html
@@ -125,23 +125,23 @@
             <div class="container-fluid col
              col-sm-12 col-md-6 border border-top-0 border-left-0 border-bottom-0 border-white" id="info">
                 <h2 class="col-12 pt">Informações da conta:</h2>
-                <div class="form-group row pt-lg-5">
-                    <label class="col-form-label" style="padding-right: 4vh !important;">Nome:</label>
+                <div class="form-group row pt-xs-5 pt-lg-5">
+                    <label class="col-sm-12 col-md-3 col-lg-2 col-lg-3 col-form-label m-0" id="namel">Nome:</label>
                     <input type="text" class="form-control col nao" id="Nnome" value="Cody Simmmons" readonly
                         style="background-color: white;">
                 </div>
                 <div class="form-group row">
-                    <label class="col-form-label" style="padding-right: 8.4vh !important;">RA: </label>
+                    <label class="col-sm-12 col-md-2 col-lg-3 col-form-label m-0" id="ral">RA: </label>
                     <input type="text" class="form-control col nao" id="Nra" value="000000" readonly
                         style="background-color: white;">
                 </div>
                 <div class="form-group row">
-                    <label class="col-form-label" style="padding-right: 5.1vh !important;">Email: </label>
+                    <label class="col-sm-12 col-md-3 col-lg-3 col-form-label m-0" id="maill">Email: </label>
                     <input type="text" class="form-control col nao" id="Nemail" value="cody.simmmons@ifmg.edu.br"
                         readonly style="background-color: white;">
                 </div>
                 <div class="form-group row">
-                    <label class="col-form-label">Usuário: </label>
+                    <label class="col-sm-12 col-md-3 col-lg-3 col-form-label m-0" id="usrl">Usuário: </label>
                     <input type="text" class="form-control col nao" id="Nuser" value="coddy123" readonly
                         style="background-color: white;">
                 </div>
@@ -202,7 +202,7 @@
                     <div class="card">
                         <div class="card-header" id="headingTwo">
                             <h2 class="mb-0">
-                                <button class="btn btn-link btn-block text-left collapsed" type="button"
+                                <button class="btn btn-link btn-block text-left collapsed text-decoration-none" type="button"
                                     data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false"
                                     aria-controls="collapseTwo" onclick="muda(2)">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
@@ -238,7 +238,7 @@
                     <div class="card">
                         <div class="card-header" id="headingThree">
                             <h2 class="mb-0">
-                                <button class="btn btn-link btn-block text-left collapsed" type="button"
+                                <button class="btn btn-link btn-block text-left collapsed text-decoration-none" type="button"
                                     data-toggle="collapse" data-target="#collapseThree" aria-expanded="false"
                                     aria-controls="collapseThree" onclick="muda(3)">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
