--- a/Site/Web2/login.html
+++ b/Site/Web2/login.html
@@ -76,8 +76,14 @@
                     <input type="password" class="form-control" id="inputPassword" placeholder="Digite sua senha">
                 </div>
             </div>
+            <!-- <div class="form-row justify-content-center pt-4 pt-xl-5" id="login">
+                <button type="submit" class="btn btn-outline-light" id="logar">Logar Adm</button>
+            </div> -->
             <div class="form-row justify-content-center pt-4 pt-xl-5" id="login">
-                <button type="submit" class="btn btn-outline-light" id="logar">Logar</button>
+                <a href="/index_adm.html" class="btn btn-outline-light" id="logar">Logar Adm</a>
+            </div>
+            <div class="form-row justify-content-center pt-4 pt-xl-5" id="login2">
+                <a href="/index_aluno.html" class="btn btn-outline-light"  id="logar">Logar Aluno</a>
             </div>
             <span class="form-row justify-content-center pt-5 pt-md-3 text-decoration-none">Não está cadastrado? <a
                     class="text-decoration-none pl-2" href="/cadastro.html" id="crie"> Crie sua conta!</a></span>
