--- a/Site/Web2/index_adm.html
+++ b/Site/Web2/index_adm.html
@@ -51,13 +51,16 @@
                 <div class="collapse navbar-collapse " id="navbarResponsive">
                     <ul class="navbar-nav ml-md-auto">
                         <li class="nav-item">
-                            <a class="nav-link js-scroll-trigger " href="/index_aluno.html">Inicio</a>
+                            <a class="nav-link js-scroll-trigger " href="/index_adm.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link js-scroll-trigger" href="/ranking_aluno.html">Ranking</a>
+                            <a class="nav-link js-scroll-trigger" href="/ranking_adm.html">Ranking</a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link js-scroll-trigger" href="/feedback_aluno.html">Feedback</a>
+                            <a class="nav-link js-scroll-trigger" href="/coleta_adm.html">Coleta</a>
+                        </li>
+                        <li class="nav-item ">
+                            <a class="nav-link js-scroll-trigger" href="/reestudo_adm.html">Re-estudo</a>
                         </li>
                         <ul class="navbar-nav menu">
                             <li class="nav-item dropdown">
@@ -84,6 +87,12 @@
                                 </a>
                                 <div id="nave" class="dropdown-menu dropdown-menu-right"
                                     aria-labelledby="navbarDropdown">
+                                    <a class="dropdown-item" href="/infoif_adm.html">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18"
+                                            fill="currentColor" class="bi bi-paperclip" viewBox="0 0 16 19">
+                                            <path
+                                                d="M4.5 3a2.5 2.5 0 0 1 5 0v9a1.5 1.5 0 0 1-3 0V5a.5.5 0 0 1 1 0v7a.5.5 0 0 0 1 0V3a1.5 1.5 0 1 0-3 0v9a2.5 2.5 0 0 0 5 0V5a.5.5 0 0 1 1 0v7a3.5 3.5 0 1 1-7 0V3z" />
+                                        </svg>Informações If</a>
                                     <a class="dropdown-item" href="/conta_aluno.html">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18"
                                             fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 19">
@@ -132,9 +141,10 @@
             <div class="col-md-6">
                 <div class="text_col pt-md-3 col-sm-12">
                     <div id="text_white" class="container-fluid mx-auto text-justify row">
-                        <div id="card1"class="align-self-center justify-content-center d-inline-flex container-fluid m-0 p-0">
+                        <div id="card1"
+                            class="align-self-center justify-content-center d-inline-flex container-fluid m-0 p-0">
                             <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor"
-                                class="bi bi-check2 align-self-center mx-auto" id="trp"viewBox="0 0 16 16">
+                                class="bi bi-check2 align-self-center mx-auto" id="trp" viewBox="0 0 16 16">
                                 <path
                                     d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0z" />
                             </svg>
