--- a/Site/Web2/index.html
+++ b/Site/Web2/index.html
@@ -81,7 +81,7 @@
                         <a href="https://github.com/mateusfilipe/VFeRoma" class="btn btn-outline-primary m-0 " role="button" id="btn_git">Veja no Github</a>
                     </div>
                 </div>
-                <div class="col-6 container-fluid align-middle  d-none d-md-block">
+                <div class="col-6 container-fluid align-middle align-self-center d-none d-md-block">
                     <img src="/image/rere.png" alt="" class="mx-auto d-block" id="i_img1">
                 </div>
             </div>
@@ -89,7 +89,7 @@
 
         <div class="col-12 container-fluid shadow mt-2" id="c_blue">
             <div class="row mx-auto container-fluid">
-                <div class="col-6 container-fluid align-middle  d-none d-md-block">
+                <div class="col-6 container-fluid align-middle align-self-center d-none d-md-block">
                     <img src="/image/recic.jpg" alt="" class="mx-auto d-block " id="i_img2">
                 </div>
                 <div class="col col-md-6">
@@ -114,7 +114,7 @@
                             integrantes do grupo decidiram começar por ele mesmo.</p>
                     </div>
                 </div>
-                <div class="col-6 container-fluid align-middle  d-none d-md-block">
+                <div class="col-6 container-fluid align-middle  d-none d-md-block align-self-center">
                     <img src="/image/ifsaba.jpg" alt="" class="mx-auto d-block" id="i_img3">
                 </div>
             </div>
@@ -122,7 +122,7 @@
 
         <div class="col-12 container-fluid shadow mt-2 " id="c_blue">
             <div class="row mx-auto container-fluid">
-                <div class="col-6 container-fluid align-middle  d-none d-md-block">
+                <div class="col-6 container-fluid align-middle  d-none d-md-block align-self-center">
                     <img src="/image/ifbambu.jpg" alt="" class="mx-auto d-block" id="i_img4">
                 </div>
                 <div class="col col-md-6">
