--- a/Site/Web2/login.html
+++ b/Site/Web2/login.html
@@ -85,8 +85,7 @@
             <div class="form-row justify-content-center pt-4 pt-xl-5" id="login2">
                 <a href="/index_aluno.html" class="btn btn-outline-light"  id="logar">Logar Aluno</a>
             </div>
-            <span class="form-row justify-content-center pt-5 pt-md-3 text-decoration-none">Não está cadastrado? <a
-                    class="text-decoration-none pl-2" href="/cadastro.html" id="crie"> Crie sua conta!</a></span>
+            <a class=" pl-2" href="/cadastro.html" id="crie"><span class="form-row justify-content-center pt-5 pt-md-3 text-decoration-none">Não está cadastrado?  Crie sua conta!</span></a>
         </form>
     </div>
 
