--- a/Site/Web2/index_adm.html
+++ b/Site/Web2/index_adm.html
@@ -126,17 +126,19 @@
     </header>
 
     <div class="indiciplina justify-content-center " id="c_blue">
-        <div>
-            <h1 class="">Bem vindo Cody Simmmons</h1>
+        <div class="d-flex">
+            <h1 class="align-self-center mx-auto">Bem vindo Cody Simmmons</h1>
         </div>
 
         <div id="" class="container-fluid row">
             <p class="text_white col-12 pt-md-5">Pontos de coleta perto de você:</p>
-            <div id="map-container-google-1" class="z-depth-1-half m-0 col" style="height: 40vh !important;">
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15009.149206050868!2d-43.838397!3d-19.8700868!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x779dd569368a90d4!2sInstituto%20Federal%20de%20Minas%20Gerais%20Campus%20Sabar%C3%A1!5e0!3m2!1spt-BR!2sbr!4v1619576702328!5m2!1spt-BR!2sbr"
-                    loading="lazy" style="border:0" class="h-100 w-100 " allowfullscreen>
-                </iframe>
+            <div class="border border-top-0 border-left-0 border-bottom-0 border-white col-md-6 d-flex" id="diva">
+                <div id="map-container-google-1" class="z-depth-1-half m-0 col align-self-center mx-auto" style="height: 40vh !important;">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15009.149206050868!2d-43.838397!3d-19.8700868!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x779dd569368a90d4!2sInstituto%20Federal%20de%20Minas%20Gerais%20Campus%20Sabar%C3%A1!5e0!3m2!1spt-BR!2sbr!4v1619576702328!5m2!1spt-BR!2sbr"
+                        loading="lazy" style="border:0" class="h-100 w-100 align-self-center" allowfullscreen>
+                    </iframe>
+                </div>
             </div>
             <div class="col-md-6">
                 <div class="text_col pt-md-3 col-sm-12">
