--- a/Site/Web2/ranking_adm.html
+++ b/Site/Web2/ranking_adm.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
 
     <link rel="stylesheet" href="./css/estilo.css">
-    <link rel="stylesheet" href="./css/estiloRankingAluno.css">
+    <link rel="stylesheet" href="./css/estiloRankingAdm.css">
     <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/node_modules/bootstrap-icons/font/bootstrap-icons.css">
     <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
@@ -124,7 +124,7 @@
             </div>
         </nav>
     </header>
-    
+
     <div class="indiciplina justify-content-center " id="c_blue">
         <div>
             <h1 class="">Ranking</h1>
