--- a/Site/Web2/conta_aluno.html
+++ b/Site/Web2/conta_aluno.html
@@ -273,7 +273,7 @@
             </div>
 
         </div>
-        <p id="mailInfo" class="text-center pt-5">Quer alterar algum dado diferente? Mande um<a href="mailto:projetotrashmap@gmail.com?subject=Aluno:%20Alterar%20dados" id="emailTo" class="text-decoration-none">e-mail  para a equipe:  trashmap.if@gmail.com</a></p> 
+        <p id="mailInfo" class="text-center pt-5">Quer alterar algum dado diferente? Mande um<a href="mailto:projetotrashmap@gmail.com?subject=Aluno:%20Alterar%20dados" id="emailTo" class="text-decoration-none" style="padding-left: 0.3rem !important;">e-mail  para a equipe:  trashmap.if@gmail.com</a></p> 
     </div>
 
     <!-- Rodapé -->
