--- a/Site/Web2/cadastro.html
+++ b/Site/Web2/cadastro.html
@@ -130,37 +130,36 @@
     
     <!-- Rodapé -->
     <footer class="row text-center mt-3 ml-0 mr-0 mb-3 p-0" id="rodape">
-        <a class="navbar-brand js-scroll-trigger col d-none d-md-block mt-md-2  mt-lg-2 mt-xl-2 mt-md-3 p-2" id="nameproj">
-            <svg width="35" height="30" viewBox="0 0 33 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <a class="navbar-brand js-scroll-trigger col d-none d-md-block mt-md-2 mt-lg-3 p-2 " id="nameproj">
+            <svg width="33" height="26" viewBox="0 0 33 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
                     d="M13.6321 0.688052L3.60807 4.00531C2.30584 4.43625 1.86612 4.69046 1.43338 5.0564C1.00063 5.42235 0.681173 5.86487 0.469898 6.39102C0.258623 6.91716 0.155533 7.41486 0.155533 8.78777V23.7661C0.155533 24.4336 0.224963 24.6756 0.35534 24.9196C0.485716 25.1637 0.677038 25.3552 0.92082 25.4857C1.1646 25.6162 1.40641 25.6857 2.07324 25.6857H30.8991C31.5659 25.6857 31.8077 25.6162 32.0515 25.4857C32.2953 25.3552 32.4866 25.1637 32.617 24.9196C32.7474 24.6756 32.8168 24.4336 32.8168 23.7661V8.75484C32.8168 7.39118 32.7157 6.89702 32.5077 6.37391C32.2998 5.85081 31.985 5.41008 31.5578 5.04383C31.1307 4.67759 30.6963 4.42185 29.4073 3.98053L19.8845 0.720191C18.5429 0.260842 18.0804 0.141504 17.5456 0.0618076C17.0108 -0.017889 16.5133 -0.0204465 15.9777 0.0537482C15.4421 0.127943 14.9784 0.24252 13.6321 0.688052ZM2.64876 23.19H10.9175V10.5599C10.9175 10.0077 11.3652 9.55994 11.9175 9.55994H21.0549C21.6071 9.55994 22.0549 10.0077 22.0549 10.5599V23.19H30.3236V8.75484C30.3236 7.78756 30.2885 7.54145 30.1912 7.29663C30.1326 7.14932 30.0562 7.04241 29.9359 6.93927C29.736 6.76787 29.5148 6.65496 28.6004 6.34192L19.0777 3.08157C17.9373 2.69116 17.5658 2.58802 17.1785 2.53029C16.8786 2.48561 16.6198 2.48428 16.3195 2.52588C15.9316 2.57962 15.559 2.67893 14.4147 3.05761L4.39068 6.37486C3.46809 6.68017 3.2448 6.79166 3.04237 6.96284C2.92043 7.06596 2.84278 7.17351 2.78324 7.32178C2.68442 7.5679 2.64876 7.81511 2.64876 8.78777V23.19Z"
                     fill="#005FF9" />
             </svg>
-            TrashMap
-        </a>
-        <div class="col mt-3 mr-0 ml-0 pr-0 mb-4 mt-lg-3 mt-md-3 mt-xl-2 ">
-            <a href="" class="media_social text-decoration-none cor">
+            TrashMap</a>
+        <div class="col mt-3 mr-0 ml-0 pr-0 ">
+            <a href="" class="media_social text-decoration-none ">
                 <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
                     class="bi bi-facebook" viewBox="0 0 16 16">
                     <path
                         d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z" />
                 </svg>
             </a>
-            <a href="" class="media_social text-decoration-none cor">
+            <a href="" class="media_social text-decoration-none ">
                 <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-twitter"
                     viewBox="0 0 16 16">
                     <path
                         d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z" />
                 </svg>
             </a>
-            <a href="" class="media_social text-decoration-none cor">
+            <a href="" class="media_social text-decoration-none ">
                 <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
                     class="bi bi-linkedin" viewBox="0 0 16 16">
                     <path
                         d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z" />
                 </svg>
             </a>
-            <a href="" class="media_social text-decoration-none cor">
+            <a href="" class="media_social text-decoration-none ">
                 <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
                     class="bi bi-instagram" viewBox="0 0 16 16">
                     <path
