--- a/Site/Web2/coleta_adm.html
+++ b/Site/Web2/coleta_adm.html
@@ -133,31 +133,35 @@
             <p class="">Informe sobre a ultima coleta</p>
             <div class="form d-flex flex-column">
                 <div class="form-group align-self-center">
-                    <label>Lixeira/Local</label>
-                    <select id="inputIF" class="form-control" required>
-                        <option class="dropdown-item" selected>Selecione o local</option>
-                        <option class="dropdown-item">...</option>
-                    </select>
-                    <label>Tipo de lixo</label>
-                    <select id="inputIF" class="form-control" required>
-                        <option class="dropdown-item" selected>Selecione o tipo</option>
-                        <option class="dropdown-item">...</option>
-                    </select>
+                    <div>
+                        <label>Lixeira/Local</label>
+                        <select id="inputIF" class="form-control" required>
+                            <option class="dropdown-item" selected>Selecione o local</option>
+                            <option class="dropdown-item">...</option>
+                        </select>
+                    </div>
+                    <div>
+                        <label>Tipo de lixo</label>
+                        <select id="inputIF" class="form-control" required>
+                            <option class="dropdown-item" selected>Selecione o tipo</option>
+                            <option class="dropdown-item">...</option>
+                        </select>
+                    </div>
                 </div>
 
                 <div class="form-group align-self-center">
 
                     <label>Quantidade coletada</label>
-                    <input type="text" class="form-control " id="inputTema" placeholder="Digite aqui a quantidade coletada" required>
+                    <input type="text" class="form-control " id="inputQtd" placeholder="Digite aqui a quantidade coletada" required>
 
                     <label>Dia</label>
-                    <input type="text" class="form-control " id="inputName" placeholder="" required>
+                    <input type="text" class="form-check-inline " id="inputData" placeholder="" required>
 
                     <label>Mês</label>
-                    <input type="text" class="form-control " id="inputName" placeholder="" required>
+                    <input type="text" class="form-check-inline " id="inputData" placeholder="" required>
 
                     <label>Ano</label>
-                    <input type="text" class="form-control " id="inputName" placeholder="" required>
+                    <input type="text" class="form-check-inline " id="inputData" placeholder="" required>
 
                 </div>
 
