--- a/Site/Web2/coleta_adm.html
+++ b/Site/Web2/coleta_adm.html
@@ -2,7 +2,7 @@
 <html lang="pt_br" style="height: 100vh;">
 
 <head>
-    <title>TrashMap-Feedback</title>
+    <title>TrashMap-ColetaAdm</title>
     <meta charset="UTF-8">
 
     <link rel="stylesheet" href="/css/estilo.css">
@@ -132,37 +132,24 @@
         <div class="container-fluid " id="text_white">
             <p class="">Informe sobre a ultima coleta</p>
             <div class="form d-flex flex-column">
-                <div class="form-group align-self-center">
-                    <div>
-                        <label>Lixeira/Local</label>
-                        <select id="inputIF" class="form-control" required>
-                            <option class="dropdown-item" selected>Selecione o local</option>
-                            <option class="dropdown-item">...</option>
-                        </select>
-                    </div>
-                    <div>
-                        <label>Tipo de lixo</label>
-                        <select id="inputIF" class="form-control" required>
-                            <option class="dropdown-item" selected>Selecione o tipo</option>
-                            <option class="dropdown-item">...</option>
-                        </select>
-                    </div>
+                <div class="form-group align-self-center" id="select_trash">
+                    <select id="inputIF" class="form-control" required>
+                        <option class="dropdown-item" selected>Lixeira/Local</option>
+                        <option class="dropdown-item">...</option>
+                    </select>
+                    <select id="inputIF" class="form-control" required>
+                        <option class="dropdown-item" selected>Tipo de lixo</option>
+                        <option class="dropdown-item">...</option>
+                    </select>
                 </div>
 
                 <div class="form-group align-self-center">
-
-                    <label>Quantidade coletada</label>
-                    <input type="text" class="form-control " id="inputQtd" placeholder="Digite aqui a quantidade coletada" required>
-
-                    <label>Dia</label>
-                    <input type="text" class="form-check-inline " id="inputData" placeholder="" required>
-
-                    <label>Mês</label>
-                    <input type="text" class="form-check-inline " id="inputData" placeholder="" required>
-
-                    <label>Ano</label>
-                    <input type="text" class="form-check-inline " id="inputData" placeholder="" required>
-
+                    <div>
+                        <input type="text" class="form-control " id="inputQtd" placeholder="Quantidade coletada" required>
+                        <input type="text" class="form-check-inline " id="inputData" placeholder="Dia" required>
+                        <input type="text" class="form-check-inline " id="inputData" placeholder="Mês" required>
+                        <input type="text" class="form-check-inline " id="inputData" placeholder="Ano" required>
+                    </div>
                 </div>
 
                 <div class="criarFeed align-self-center">
